# Sem2ICA

./: .gitignore  .gitmodules  AACam.cpp  AACam.hpp  Actor.hpp  AngularVelocity  Application.cpp  Application.h  CMakeLists.txt  DX1117_Assignment 2_2022S2.docx  DX1117_Assignment 2_2022S2.odt  FPSCam.cpp  FPSCam.hpp  GUI.cpp  GUI.hpp  Galaxy.cpp  Galaxy.hpp  GameObject.cpp  GameObject.h  ICA.cpp  ICA.hpp  Icaa.cpp  Icaa.hpp  Input.cpp  Input.hpp  Light.hpp  LightObject.hpp  LoadOBJ.cpp  LoadOBJ.h  LoadTGA.cpp  Material.hpp  MatrixStack.cpp  MatrixStack.hpp  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  ModelScene.cpp  ModelScene.hpp  MouseController.cpp  (+36 more)
Application/: Application.vcxproj  Application.vcxproj.filters
Application/Assets/: 2009-background.tga.xmp  TerenceABClassic.tga.xmp  Terrence.tga  abg.tga  jeraldo512.tga.xmp  slingshot_1.tga.xmp
Application/Debug/: Application.exe.recipe  Application.ilk  vc142.idb
Application/Debug/Application.tlog/: Application.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Application/Image/: triangle.tga
Application/Shader/: comg.fragmentshader  comg.vertexshader
Application/Source/: GameObject.cpp  GameObject.h  LoadTGA.cpp  Mesh.cpp  Mesh.h  MeshBuilder.cpp  Scene1.cpp  Scene1.h  physics.cpp  physics.h
Application/glm/ext/: quaternion_common.hpp
Common/: CMakeLists.txt  Vector3.cpp  Vector3.h  timer.cpp  timer.h
Common/Debug/Common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
DX_02_Ian_211075R_ICA2_SERVER/: AddScoreBackend.php  AddScoreForm.html  DeleteAllScores.php  DeleteUserBackend.php  LoginBackend.php  LoginForm.html  ReadLeaderBoard.php  ReadPlayerStats.php  ReadPlayerStatsForm.html  ReadPlayerStatsJSON.php  ReadScoreBoard.php  ReadScoreBoardJSON.php  RegisterBackend.php  RegisterForm.html  SetupDB.php  UpdatePlayerStatsBackend.php  checklist.txt  dbconninc.php  readme.md  readme.txt  test.php
DX_02_Ian_211075R_ICA2_SERVER/game/: index.html
Debug/: Common.idb  Common.lib
Image/: NYPSmall.tga  jerald.tga
Shader/: Blending.fragmentshader  LSource.fragmentshader  Text.fragmentshader  Texture.fragmentshader  comg.fragmentshader  comg.vertexshader
dx_01_john_221234A_ica2_client/: Assembly-CSharp.csproj  dx_01_john_221234A_ica2_client.sln
dx_01_john_221234A_ica2_client/Assets/A2starter/Materials/: Floor.mat  Player.mat
dx_01_john_221234A_ica2_client/Assets/A2starter/Prefabs/: Coin.prefab
dx_01_john_221234A_ica2_client/Assets/A2starter/Scenes/: GameScn.unity  MainScn.unity
dx_01_john_221234A_ica2_client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
dx_01_john_221234A_ica2_client/UserSettings/Layouts/: default-2021.dwlt
dx_02_ian_211075R_ica2_client/: Assembly-CSharp.csproj  dx_02_ian_211075R_ica2_client.sln
dx_02_ian_211075R_ica2_client/UserSettings/: EditorUserSettings.asset
dx_02_ian_211075R_ica2_client/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
(+15 files in other folders)
