cmake_minimum_required(VERSION 3.0.0)
project(DXFORCE VERSION 1.0.0)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB COMMON Common/*.cpp)
file(GLOB SOURCE *.cpp)

if (UNIX)
	set(CMAKE_CXX_FLAGS "-Wno-deprecated")
	set(CMAKE_EXE_LINKER_FLAGS "-lglfw -lGL -lGLU -lGLEW")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
	set(CMAKE_CXX_STANDARD 14)
endif (UNIX)
if (WIN32)
	add_definitions(-DGLEW_STATIC)
	find_package(OpenGL REQUIRED)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
endif (WIN32)

add_library(CommonLib ${COMMON})
add_executable(FMP ${SOURCE})

target_include_directories(FMP PUBLIC ${CMAKE_SOURCE_DIR}/Common/)
target_include_directories(FMP PUBLIC ${CMAKE_SOURCE_DIR}/glew/include/)
target_include_directories(FMP PUBLIC ${CMAKE_SOURCE_DIR}/glfw/include/)
target_link_libraries(FMP PUBLIC CommonLib)
if (WIN32)
	target_link_libraries(FMP PUBLIC ${CMAKE_SOURCE_DIR}/glew/lib/glew32s.lib)
	target_link_libraries(FMP PUBLIC ${CMAKE_SOURCE_DIR}/glfw/lib/glfw3.lib)
	target_link_libraries(FMP PUBLIC ${OPENGL_LIBRARIES})
endif (WIN32)
